[project]
name = "hw-github-advanced"
version = "0.1.0"
description = ""
authors = [
    {name = "Vadim_Shestakov",email = "vadim.shestakov.p@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
